# parallels-masters-practice

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench.cpp
src/: CMakeLists.txt  algo.h  main.cpp  par_algo.cpp  seq_algo.cpp
tests/: CMakeLists.txt  test.cpp
